# ProjectEuler-Linux

./: .gitignore  Makefile.am  README.md  configure.ac  run.config
libsrc/: Makefile.am
libsrc/libeuler/: Makefile.am  euler.cpp  euler.h
libsrc/libnumbers/: Makefile.am  numbers.cpp  numbers.h
libsrc/libprimes/: Makefile.am  primes.cpp  primes.h
src/: Makefile.am  pe1  pe1.cpp  pe130.cpp  pe7.cpp
